index presque terminé

--- a/style.scss
+++ b/style.scss
@@ -4,3 +4,6 @@
 @import "styles/_footer.scss";
 @import "styles/_main.scss";
 @import "styles/_index.scss";
+@import "styles/_appartement.scss";
+@import "styles/_quartier.scss";
+@import "styles/_reservation.scss";
