--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -11,10 +11,19 @@ body {
   color: black;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .container {
   width: 70%;
   max-width: 1400px;
   margin: 0 auto;
+}
+@media screen and (max-width: 1600px) {
+  .container {
+    max-width: 1100px;
+  }
 }
 
 .flex {
@@ -24,8 +33,8 @@ body {
 }
 
 .titre {
-  color: #EF0000;
-  font-family: "Caveat", cursive;
+  color: #182C39;
+  font-family: "Roboto", sans-serif;
   letter-spacing: 3px;
 }
 
@@ -63,6 +72,14 @@ header .headerTop > div {
   width: 90%;
   align-items: flex-start;
 }
+header .headerTop #logo {
+  position: absolute;
+  top: 8px;
+  left: 20px;
+}
+header .headerTop #logo img {
+  height: 150px;
+}
 
 nav {
   height: 20px;
@@ -79,7 +96,7 @@ nav ul:first-child li {
   position: relative;
 }
 nav ul:first-child li:hover {
-  color: #EF0000;
+  color: #C99D46;
 }
 nav ul:first-child li:before, nav ul:first-child li::after {
   content: "";
@@ -88,15 +105,14 @@ nav ul:first-child li:before, nav ul:first-child li::after {
   display: block;
   height: 2px;
   transition: all 0.3s ease;
-  margin-top: 2px;
-  background-color: #EF0000;
+  background-color: #C99D46;
 }
 nav ul:first-child li:after {
   bottom: -5px;
   left: -5px;
 }
 nav ul:first-child li:before {
-  top: -5px;
+  top: -7px;
   right: -5px;
 }
 nav ul:first-child li:hover::after {
@@ -115,10 +131,15 @@ nav ul:nth-child(2) li a {
   color: white;
 }
 nav ul:nth-child(2) li a:hover {
-  color: #EF0000;
+  color: #C99D46;
 }
 nav ul:nth-child(2) li::after, nav ul:nth-child(2) li::before {
   content: none;
+}
+
+.bold {
+  font-weight: bold;
+  color: #C99D46;
 }
 
 .headerTop > div > div:last-child {
@@ -145,6 +166,7 @@ nav ul:nth-child(2) li::after, nav ul:nth-child(2) li::before {
   transform: skewY(-3deg);
   position: absolute;
   bottom: -50px;
+  right: 0;
 }
 
 .headerTop > div > div {
@@ -153,7 +175,7 @@ nav ul:nth-child(2) li::after, nav ul:nth-child(2) li::before {
 }
 .headerTop > div > div input[type=text] {
   width: 100%;
-  border: 3px solid #EF0000;
+  border: 3px solid #C99D46;
   border-right: none;
   padding: 5px;
   height: 30px;
@@ -161,93 +183,64 @@ nav ul:nth-child(2) li::after, nav ul:nth-child(2) li::before {
   outline: none;
   color: black;
 }
+@media screen and (max-width: 1600px) {
+  .headerTop > div > div input[type=text] {
+    width: 80%;
+  }
+}
 .headerTop > div > div button[type=submit] {
   width: 40px;
   height: 30px;
-  border: 1px solid #EF0000;
-  background: #EF0000;
+  border: 1px solid #C99D46;
+  background: #C99D46;
   text-align: center;
-  color: #fff;
+  color: #182C39;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
 }
 
 footer {
+  position: relative;
   background: #182C39;
+  padding-top: 70px;
 }
 footer .topFooter {
-  height: 200px;
   padding-top: 30px;
   align-items: flex-start;
-  font-family: "Caveat", cursive;
+  font-family: "Roboto", sans-serif;
   color: white;
 }
 footer .topFooter h3 {
-  color: #EF0000;
+  color: #C99D46;
   text-transform: uppercase;
   margin-bottom: 7px;
 }
+footer .topFooter h4 {
+  color: #C99D46;
+}
 footer .topFooter a:hover {
-  color: #EF0000;
+  color: #C99D46;
 }
 footer .map {
   background: white;
-  height: 450px;
+  height: 550px;
   position: relative;
   overflow: hidden;
 }
 footer .map p {
-  font-family: "Caveat", cursive;
+  font-family: "Roboto", sans-serif;
   margin-bottom: 10px;
 }
 footer .map h3 {
   padding: 15px 0;
-  font-family: "Caveat", cursive;
+  font-family: "Roboto", sans-serif;
   font-size: 2.5rem;
 }
-footer .social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-  margin: 30px auto;
-}
-footer .social .fa-x-twitter:hover {
-  color: #00aced;
-}
-footer .social .fa-facebook-f:hover {
-  color: #0866FF;
-}
-footer .social .fa-instagram:hover {
-  color: red;
-}
-footer .social > a > i {
-  display: block;
-  width: 60px;
-  height: 60px;
-  font-size: 2.5rem;
-  background: rgb(255, 255, 255);
-  text-align: center;
-  padding: 10px;
-  border-radius: 100%;
-  transition: 0.3s ease;
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
-footer .social > a > i:hover {
-  box-shadow: rgba(0, 0, 0, 0.2) 0px -23px 10px 0px inset, rgba(0, 0, 0, 0.2) 0px -36px 5px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 10px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 10px;
-}
-footer .bottomFooter {
-  height: 30px;
-  position: relative;
-  overflow: hidden;
-}
-footer .bottomFooter a:hover {
-  color: #EF0000;
-}
-footer .bottomFooter p {
+footer .copyright {
   text-align: center;
   color: white;
+  margin: 50px auto 10px;
 }
 
 .barreFooter {
@@ -256,32 +249,46 @@ footer .bottomFooter p {
   background: #182C39;
   transform: skewY(-3deg);
   position: absolute;
-  bottom: -60px;
+  top: -50px;
+}
+
+.logo {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.gotop {
+  position: absolute;
+  right: 0;
+  bottom: 50%;
+  padding: 60px;
+}
+.gotop i {
+  font-size: 3rem;
+  color: white;
 }
 
 main {
   background: white;
+  position: relative;
 }
 
 .indexGrid {
   display: grid;
-  grid-template-columns: 30% 60%;
+  grid-template-columns: 30% 70%;
   justify-content: center;
+  margin: 0 auto 150px;
+  width: 1400px;
 }
 .indexGrid aside {
-  border: 5px solid;
-  border-image: linear-gradient(180deg, rgb(255, 165, 0) 0%, rgb(255, 255, 255) 40%);
-  border-image-slice: 1;
-  border-top: none;
-  border-radius: 5px;
-  margin-top: 150px;
-  position: relative;
-  padding: 50px 20px;
+  overflow: hidden;
+  margin-top: 100px;
 }
 .indexGrid aside button {
   display: block;
   margin: 20px auto;
-  background: orange;
+  background: #182C39;
   color: white;
   text-transform: uppercase;
   padding: 15px 30px;
@@ -293,48 +300,84 @@ main {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .indexGrid aside button:hover {
-  background: rgba(255, 166, 0, 0.7);
+  background: rgba(29, 32, 34, 0.853);
+}
+.indexGrid aside h2 {
+  background: #182C39;
+  color: #ffffff;
+  padding: 5px 15px;
+  display: inline-block;
+  position: relative;
+}
+.indexGrid aside h2::after {
+  content: "";
+  width: 500%;
+  height: 2px;
+  background: #182C39;
+  position: absolute;
+  bottom: 0;
+}
+.indexGrid aside .actu {
+  padding: 20px 10px;
+  overflow: hidden;
 }
 .indexGrid aside .actu h3 {
   font-family: "Overpass", sans-serif;
-  font-size: 2rem;
-  padding: 0px 0px 15px;
-  color: #ffa500;
-  line-height: 30px;
+  font-size: 1.2rem;
+  color: #201f1d;
+  letter-spacing: 0;
+  text-decoration: underline;
 }
 .indexGrid aside .actu p {
   padding: 15px 0px;
-  font-size: 1.3rem;
-  line-height: 25px;
+  font-size: 1rem;
 }
 .indexGrid aside .actu .card {
-  background: rgb(236, 236, 236);
-  padding: 10px 10px;
-  border: 1px solid rgb(189, 189, 189);
-  margin-bottom: 20px;
+  margin-bottom: 60px;
+}
+.indexGrid aside .actu .card > div {
+  align-items: flex-start;
+  gap: 15px;
+}
+.indexGrid aside .actu .card .img {
+  width: 120px;
+  height: 120px;
+  flex-shrink: 0;
+}
+.indexGrid aside .actu .card .un {
+  background: scroll center/cover url("img/marche.jpg");
+}
+.indexGrid aside .actu .card .deux {
+  background: scroll center/cover url("img/appartExt.jpg");
+}
+.indexGrid aside .actu .card .trois {
+  background: scroll center/cover url("img/dessin.jpg");
 }
 .indexGrid aside .actu .card i {
-  color: #ffa500;
+  color: #ffffff;
+}
+.indexGrid aside .actu .card .fa-newspaper {
+  color: red;
+}
+.indexGrid aside .actu .card .fa-house {
+  color: red;
+}
+.indexGrid aside .actu .separation {
+  width: 70%;
+  height: 1px;
+  background: #C99D46;
+  margin: 50px auto;
+}
+.indexGrid aside .actu .pub a {
+  width: 100%;
+}
+.indexGrid aside .actu .pub a img {
+  width: 100%;
 }
 .indexGrid aside div .appart {
   display: block;
   width: 90%;
   margin: 0 auto;
-}
-.indexGrid aside::before {
-  content: "ACTUS";
-  width: 95%;
-  height: 40px;
-  background: #ffa500;
-  color: white;
-  position: absolute;
-  top: -27px;
-  left: -5px;
-  transform: skewY(-3deg);
-  border: 5px solid orange;
-  border-bottom: none;
-  font-size: 2rem;
-  padding-left: 5%;
 }
 .indexGrid section {
   padding: 50px;
@@ -342,14 +385,15 @@ main {
 .indexGrid section h1 {
   font-size: 4.5rem;
   text-align: center;
-  text-shadow: black 2px 2px 2px;
 }
 .indexGrid section p {
   padding: 15px 0px;
   font-size: 1.2rem;
   text-indent: 15px;
   line-height: 30px;
-  color: rgb(92, 66, 66);
+  color: rgb(29, 32, 34);
+  width: 80%;
+  margin: 0 auto;
 }
 .indexGrid section p::first-letter {
   font-weight: 900;
@@ -357,13 +401,15 @@ main {
 }
 .indexGrid section h2 {
   font-size: 2.5rem;
-  text-shadow: black 1px 1px 1px;
   letter-spacing: 1px;
+  text-align: center;
 }
 .indexGrid section h3 {
-  margin-top: 20px;
+  margin: 50px auto 0px;
   font-size: 1.7rem;
-  font-family: "Overpass", sans-serif;
+  font-family: "Roboto", sans-serif;
+  color: #182C39;
+  width: 80%;
 }
 .indexGrid section figure {
   display: flex;
@@ -390,6 +436,35 @@ main {
 .indexGrid section .imgBox img {
   height: 200px;
 }
-.indexGrid section .airbnb-embed-frame {
-  width: 60%;
+.indexGrid section .airbnb-embed-frame img {
+  width: 100%;
+}
+
+.quartier {
+  margin: 100px 0;
+}
+.quartier h1 {
+  font-size: 2.5rem;
+  margin: 30px 0;
+}
+.quartier h2 {
+  margin: 20px auto;
+}
+.quartier p {
+  font-size: 1.2rem;
+  text-indent: 20px;
+  width: 80%;
+  margin: 0 0 50px;
+}
+.quartier p::first-letter {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.quartier > p {
+  margin: 30px 0 50px;
+}
+.quartier article {
+  display: grid;
+  grid-template-columns: 45% 45%;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
