--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+$colorPrimaire: #182C39;
+$colorSecondaire: #C99D46;
 
 * {
     margin: 0;
@@ -13,10 +16,18 @@ body {
     color: black;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     width: 70%;
     max-width: 1400px;
     margin: 0 auto;
+
+    @media screen and (max-width: 1600px) {
+        max-width: 1100px;
+    }
 }
 
 .flex {
@@ -27,8 +38,8 @@ body {
 
 
 .titre {
-    color: #EF0000;
-    font-family: 'Caveat', cursive;
+    color: $colorPrimaire;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 3px;
 }
 
