--- a/style.scss
+++ b/style.scss
@@ -7,3 +7,5 @@
 @import "styles/_appartement.scss";
 @import "styles/_quartier.scss";
 @import "styles/_reservation.scss";
+@import "styles/_actualite.scss";
+@import "styles/_menuBurger.scss";
