--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -8,66 +8,73 @@ footer {
         align-items: flex-start;
         font-family: 'Roboto', sans-serif;
         color: white;
+        width: 80%;
+        margin: 0 auto;
+
+        div {
+            @media screen and (max-width: 1450px) {
+                width: 180px;
+            }
+        }
+
+        @media screen and (max-width: 1450px) {
+            width: 70%;
+            gap: 20px;
+        }
+
+        @media screen and (max-width: 1050px) {
+            flex-wrap: wrap;
+        }
 
         h3 {
             color: $colorSecondaire;
             text-transform: uppercase;
             margin-bottom: 7px;
+            font-size: 0.9rem;
         }
 
         h4 {
             color: $colorSecondaire;
+            font-size: 0.8rem;
         }
-
-        a:hover {
-            color: $colorSecondaire;
-        }
-
-    }
-
-    .map {
-        background: white;
-        height: 550px;
-        position: relative;
-        overflow: hidden;
 
         p {
-            font-family: 'Roboto', sans-serif;
-            margin-bottom: 10px;
+            font-size: 0.8rem;
         }
 
-        h3 {
-            padding: 15px 0;
-            font-family: 'Roboto', sans-serif;
-            font-size: 2.5rem;
+        ul li a {
+            font-size: 0.8rem;
         }
     }
+
 
     .copyright {
         text-align: center;
         color: white;
-        margin: 50px auto 10px
+        margin: 50px auto 0;
     }
 
 
 
 
 
-}
-
-.barreFooter {
-    height: 100px;
-    width: 100%;
-    background: #182C39;
-    transform: skewY(-3deg);
-    position: absolute;
-    top: -50px;
 }
 
 .logo {
     position: absolute;
     bottom: 10px;
     right: 10px;
+
+    @media screen and (max-width: 1450px) {
+        bottom: 50px;
+    }
+
+    img {
+        @media screen and (max-width: 1450px) {
+            width: 100px;
+        }
+
+    }
 }
 
 .gotop {
@@ -80,4 +87,26 @@ footer {
         font-size: 3rem;
         color: white;
     }
+}
+
+.map {
+    @media screen and (max-width: 1450px) {
+        display: none;
+    }
+}
+
+.mapResp {
+    display: none;
+
+    @media screen and (max-width: 1450px) {
+        display: block;
+        text-align: center;
+    }
+
+    iframe {
+        @media screen and (max-width: 1450px) {
+            width: 70%;
+        }
+    }
+
 }
