--- a/styles/_quartier.scss
+++ b/styles/_quartier.scss
@@ -16,6 +16,10 @@
         width: 80%;
         margin: 0 0 50px;
 
+        @media screen and (max-width: 1350px) {
+            width: 100%;
+        }
+
         &::first-letter {
             font-size: 2rem;
             font-weight: bold;
@@ -30,16 +34,25 @@
         display: grid;
         grid-template-columns: 45% 45%;
         justify-content: space-between;
+
+        @media screen and (max-width: 1350px) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 }
 
 // SLIDER
 .slider {
     height: 450px;
-    width: 80%;
+    width: 1100px;
     margin: 0 auto;
     gap: 10px;
     margin-bottom: 150px;
+
+    @media screen and (max-width: 1150px) {
+        display: none;
+    }
 
     .photo {
         height: 100%;
@@ -56,22 +69,22 @@
     }
 
     .img1 {
-        background: scroll no-repeat center/cover url(img/slider1.jpg);
+        background: scroll no-repeat bottom/cover url(img/slider1.jpg);
     }
 
     .img2 {
-        background: scroll no-repeat center/cover url(img/slider2.jpg);
+        background: scroll no-repeat bottom/cover url(img/slider2.jpg);
     }
 
     .img3 {
-        background: scroll no-repeat center/cover url(img/slider3.jpg);
+        background: scroll no-repeat bottom/cover url(img/slider3.jpg);
     }
 
     .img4 {
-        background: scroll no-repeat center/cover url(img/slider4.jpg);
+        background: scroll no-repeat bottom/cover url(img/slider4.jpg);
     }
 
     .img5 {
-        background: scroll no-repeat center/cover url(img/slider5.jpg);
+        background: scroll no-repeat bottom/cover url(img/slider5.jpg);
     }
 }
