--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -14,6 +14,7 @@ $colorSecondaire: #C99D46;
 body {
     font-family: 'Overpass', sans-serif;
     color: black;
+    background-color: white;
 }
 
 html {
@@ -22,11 +23,15 @@ html {
 
 .container {
     width: 70%;
-    max-width: 1400px;
+    max-width: 1300px;
     margin: 0 auto;
 
     @media screen and (max-width: 1600px) {
         max-width: 1100px;
+    }
+
+    @media screen and (max-width: 1450px) {
+        max-width: 700px;
     }
 }
 
