--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -26,12 +26,17 @@ html {
     max-width: 1300px;
     margin: 0 auto;
 
+
     @media screen and (max-width: 1600px) {
         max-width: 1100px;
     }
 
     @media screen and (max-width: 1450px) {
         max-width: 700px;
+    }
+
+    @media screen and (max-width: 666px) {
+        width: 90%;
     }
 }
 
